# LightRay

./: CMakeLists.txt  README.md  imgui.ini
libs/ImGui/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Application.h  Buffer.cpp  Buffer.h  Common.h  EventSystem.cpp  EventSystem.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Window.cpp  Window.h  common.h  main.c  main.cpp  scene.h  shader.c  shader.h  window.c  window.h
src/Editor/: UI.cpp  UI.h
src/Models/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
src/Raytracing/: Camera.cuh  Interop.h  Material.cu  Material.cuh  Random.cu  Random.cuh  Ray.cu  Ray.cuh  RaytracingKernel.cu  RaytracingKernel.cuh  Renderer.cu  Renderer.h  Sphere.cu  Sphere.cuh  Utils.cuh  Vector.cu  Vector.cuh  main.cu
src/shaders/: default.fragment  default.vertex  fragment.glsl  raytracer.glsl  vertex.glsl
